# mufmt

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: basic.rs  derive.rs
mufmt-derive/: Cargo.toml
mufmt-derive/src/: lib.rs
src/: ast.rs  error.rs  lib.rs  tests.rs  types.rs
src/types/: ast.rs  manifest.rs
tests/: readme.rs
