[package]
authors = ["Alex Rutar <alex@rutar.org>"]
categories = ["template-engine"]
description = "A minimal and extensible runtime formatting library"
edition = "2024"
license = "MIT OR Apache-2.0"
name = "mufmt"
repository = "https://github.com/autobib/mufmt"
version = "0.1.0"

[dependencies]
memchr = "2.7.6"

[[example]]
name = "basic"
crate-type = ["staticlib"]
test = true
