[package]
authors = ["Alex Rutar <alex@rutar.org>"]
categories = ["template-engine"]
description = "A minimal and extensible runtime formatting library"
edition = "2024"
license = "MIT OR Apache-2.0"
name = "mufmt"
repository = "https://github.com/autobib/mufmt"
version = "0.3.1"

[dependencies]
memchr = "2.7.6"

[[example]]
name = "basic"
crate-type = ["staticlib"]
test = true

[lints.clippy]
redundant_closure_for_method_calls = "warn"
same_functions_in_if_condition = "warn"
semicolon_if_nothing_returned = "warn"
uninlined_format_args = "warn"
use_self = "warn"
