[package]
authors = ["Alex Rutar <alex@rutar.org>"]
categories = ["template-engine"]
description = "A minimal and extensible runtime formatting library"
edition = "2024"
license = "MIT OR Apache-2.0"
name = "mufmt"
repository = "https://github.com/autobib/mufmt"
version = "0.5.3"

[dependencies]
memchr = "2.7.6"
mufmt-derive = { version = "0.1.1", path = "mufmt-derive", optional = true }

[workspace]
members = ["mufmt-derive"]
resolver = "2"

[features]
default = []
derive = ["dep:mufmt-derive"]

[[example]]
name = "basic"
crate-type = ["staticlib"]
test = true

[[example]]
name = "derive"
required-features = ["derive"]

[lints.clippy]
redundant_closure_for_method_calls = "warn"
same_functions_in_if_condition = "warn"
semicolon_if_nothing_returned = "warn"
uninlined_format_args = "warn"
use_self = "warn"
