[package]
authors = ["Alex Rutar <alex@rutar.org>"]
description = "Derive macros for mufmt"
edition = "2024"
license = "MIT OR Apache-2.0"
name = "mufmt-derive"
repository = "https://github.com/autobib/mufmt"
version = "0.1.1"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["derive"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
mufmt = "0.4.4"
